src/objects/Cricket_Match_Player_Statistics__c.object
<CustomObject>
    <description>Stores cricket match Player&apos;s statistics according to real world data.</description>
    <fields>
        <fullName>Assisted_Wickets_Taken_Points__c</fullName>
        <description>Assisted Wickets Taken Points</description>
        <formula>Assisted_Wickets_Taken__c * 50</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Assisted Wickets Taken Points</inlineHelpText>
        <label>Assisted Wickets Taken Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assisted_Wickets_Taken__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Assisted Wickets Taken in this match.</description>
        <inlineHelpText>Assisted Wickets Taken in this match.</inlineHelpText>
        <label>Assisted Wickets Taken</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Boundaries4s__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total 4s scored</description>
        <inlineHelpText>Total 4s scored</inlineHelpText>
        <label>4s</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Boundaries6s__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Boundaries6s</description>
        <inlineHelpText>Boundaries6s</inlineHelpText>
        <label>6s</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cricket_Match_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Store match detail for player performance</description>
        <inlineHelpText>Store match detail for player performance</inlineHelpText>
        <label>Cricket Match Detail</label>
        <referenceTo>Cricket_Match_Details__c</referenceTo>
        <relationshipName>Cricket_Match_Statistics</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cricket_Player__c</fullName>
        <description>Stores Player detail.</description>
        <inlineHelpText>Stores Player detail.</inlineHelpText>
        <label>Cricket Player</label>
        <referenceTo>Cricket_Player__c</referenceTo>
        <relationshipName>Cricket_Player_Statistics</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Economy_Rate_Points__c</fullName>
        <description>Economy Rate Points</description>
        <formula>FLOOR(1000/Economy_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Economy Rate Points</inlineHelpText>
        <label>Economy Rate Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Economy_Rate__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Economy Rate</description>
        <inlineHelpText>Economy Rate</inlineHelpText>
        <label>Economy Rate</label>
        <precision>4</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maiden_Over_Points__c</fullName>
        <description>Maiden Over Points</description>
        <formula>Maiden_Overs__c * 200</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Maiden Over Points</inlineHelpText>
        <label>Maiden Over Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maiden_Overs__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Maiden Overs</description>
        <inlineHelpText>Maiden Overs</inlineHelpText>
        <label>Maiden Overs</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Man_Of_The_Match_Points__c</fullName>
        <description>Man Of The Match Points</description>
        <formula>IF(Man_Of_The_Match__c,1000,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Man Of The Match Points</inlineHelpText>
        <label>Man Of The Match Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Man_Of_The_Match__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Man of this match.</description>
        <inlineHelpText>Man of this match.</inlineHelpText>
        <label>Man Of The Match</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Run_Scored_Points__c</fullName>
        <description>Run Scored Points</description>
        <formula>Run_Scored__c * 10</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Run Scored Points</inlineHelpText>
        <label>Run Scored Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Run_Scored__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Runs scored in this match.</description>
        <inlineHelpText>Runs scored in this match.</inlineHelpText>
        <label>Run Scored</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Scored_100__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if scored (&gt;=100)</description>
        <inlineHelpText>True if scored (&gt;=100)</inlineHelpText>
        <label>100s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Scored_50__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if scored (&gt;50 and &lt;100).</description>
        <inlineHelpText>True if scored (&gt;50 and &lt;100)</inlineHelpText>
        <label>50s</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strike_Rate_Points__c</fullName>
        <description>Strike Rate Points</description>
        <formula>FLOOR(Strike_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Strike Rate Points</inlineHelpText>
        <label>Strike Rate Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Strike_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Strike Rate</description>
        <inlineHelpText>Strike Rate</inlineHelpText>
        <label>Strike Rate</label>
        <precision>6</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Taken3Wickets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Taken3Wickets</description>
        <inlineHelpText>Taken3Wickets</inlineHelpText>
        <label>3w</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Taken5Wickets__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Taken5Wickets</description>
        <inlineHelpText>Taken5Wickets</inlineHelpText>
        <label>5w</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Points__c</fullName>
        <description>Total Points</description>
        <formula>X100s_Points__c +  X3w_Points__c +  X4s_Points__c +  X50s_Points__c +  X5w_Points__c +  X6s_Points__c +  Assisted_Wickets_Taken_Points__c +  Economy_Rate_Points__c +  Maiden_Over_Points__c 
+  Man_Of_The_Match_Points__c +  Strike_Rate_Points__c +  Run_Scored_Points__c +  Wickets_Taken_Points__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Points</inlineHelpText>
        <label>Total Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wickets_Taken_Points__c</fullName>
        <description>Wickets Taken Points</description>
        <formula>Wickets_Taken__c * 250</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Wickets Taken Points</inlineHelpText>
        <label>Wickets Taken Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wickets_Taken__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Wickets taken in this match,</description>
        <inlineHelpText>Wickets taken in this match,</inlineHelpText>
        <label>Wickets Taken</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X100s_Points__c</fullName>
        <description>100s Points</description>
        <formula>IF(Scored_100__c,500,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>100s Points</inlineHelpText>
        <label>100s Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X3w_Points__c</fullName>
        <description>3w Points</description>
        <formula>IF(Taken3Wickets__c,300,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>3w Points</inlineHelpText>
        <label>3w Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X4s_Points__c</fullName>
        <description>4s Points</description>
        <formula>Boundaries4s__c * 25</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>4s Points</inlineHelpText>
        <label>4s Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X50s_Points__c</fullName>
        <description>50s Points</description>
        <formula>IF(Scored_50__c,200,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>50s Points</inlineHelpText>
        <label>50s Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X5w_Points__c</fullName>
        <description>5w Points</description>
        <formula>IF(Taken5Wickets__c,500,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>5w Points</inlineHelpText>
        <label>5w Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Cricket Match Player&apos;s Statistics</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CMPS-{00000}</displayFormat>
        <label>Cricket Match Player&apos;s Statistics Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cricket Match Player&apos;s Statistics</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>